--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -486,7 +486,7 @@ returns a decay function with customized parameters.</p>
 ##     y &lt;- signal * 0.25^((x/0.75)^2)
 ##     return(y)
 ## }
-## &lt;environment: 0x57e323969190&gt;
+## &lt;environment: 0x5796bea9e260&gt;
 ## attr(,&quot;name&quot;)
 ## [1] &quot;weibullDecay&quot;</code></pre>
 <p></br></p>
@@ -547,7 +547,7 @@ the documentation of the <code>vertexDecay()</code> accessor.</p>
 <pre class="r"><code># Get distance to the nearest vertex
 near_df &lt;- getNearestNode(ps)
 pdist &lt;- mean(near_df$dist)
-# &#39;pdist&#39; as the average center-to-center
+# &#39;pdist&#39; as the average center-to-center between vertices
 pdist</code></pre>
 <pre><code>## [1] 0.1</code></pre>
 <pre class="r"><code># Setting a linear decay model for all vertices
