--- a/sparse-feature-sets.html
+++ b/sparse-feature-sets.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-23" />
+<meta name="date" content="2025-10-24" />
 
 <title>Visualizing sparse feature sets on large graphs</title>
 
@@ -396,7 +396,7 @@ div.tocify {
 <h1 class="title toc-ignore">Visualizing sparse feature sets on large
 graphs</h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-23</h4>
+<h4 class="date">2025-10-24</h4>
 
 </div>
 
@@ -579,20 +579,49 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-## [1] igraph_2.2.0         PathwaySpace_1.0.3.1 RGraphSpace_1.1.0   
-## [4] ggplot2_4.0.0.9000   remotes_2.5.0       
+## [1] patchwork_1.3.2      igraph_2.2.0         SpotSpace_0.0.2     
+## [4] PathwaySpace_1.0.3.1 RGraphSpace_1.1.0    ggplot2_4.0.0.9000  
+## [7] remotes_2.5.0        bs4cards_0.1.1      
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] vctrs_0.6.5        cli_3.6.5          knitr_1.50         rlang_1.1.6       
-##  [5] xfun_0.53          ggrepel_0.9.6      generics_0.1.4     S7_0.2.0          
-##  [9] jsonlite_2.0.0     glue_1.8.0         htmltools_0.5.8.1  sass_0.4.10       
-## [13] scales_1.4.0       rmarkdown_2.30     grid_4.5.1         tibble_3.3.0      
-## [17] evaluate_1.0.5     jquerylib_0.1.4    fastmap_1.2.0      yaml_2.3.10       
-## [21] lifecycle_1.0.4    compiler_4.5.1     dplyr_1.1.4        RColorBrewer_1.1-3
-## [25] Rcpp_1.1.0         pkgconfig_2.0.3    rstudioapi_0.17.1  farver_2.1.2      
-## [29] digest_0.6.37      R6_2.6.1           RANN_2.6.2         tidyselect_1.2.1  
-## [33] pillar_1.11.1      magrittr_2.0.4     bslib_0.9.0        withr_3.0.2       
-## [37] tools_4.5.1        gtable_0.3.6       cachem_1.1.0</code></pre>
+##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
+##   [4] rlang_1.1.6            magrittr_2.0.4         RcppAnnoy_0.0.22      
+##   [7] spatstat.geom_3.6-0    matrixStats_1.5.0      ggridges_0.5.7        
+##  [10] compiler_4.5.1         png_0.1-8              vctrs_0.6.5           
+##  [13] reshape2_1.4.4         stringr_1.5.2          pkgconfig_2.0.3       
+##  [16] fastmap_1.2.0          fontawesome_0.5.3      promises_1.3.3        
+##  [19] rmarkdown_2.30         purrr_1.1.0            xfun_0.53             
+##  [22] cachem_1.1.0           jsonlite_2.0.0         goftest_1.2-3         
+##  [25] later_1.4.4            spatstat.utils_3.2-0   irlba_2.3.5.1         
+##  [28] parallel_4.5.1         cluster_2.1.8.1        R6_2.6.1              
+##  [31] ica_1.0-3              spatstat.data_3.1-8    stringi_1.8.7         
+##  [34] bslib_0.9.0            RColorBrewer_1.1-3     reticulate_1.43.0     
+##  [37] spatstat.univar_3.1-4  parallelly_1.45.1      lmtest_0.9-40         
+##  [40] jquerylib_0.1.4        scattermore_1.2        Rcpp_1.1.0            
+##  [43] knitr_1.50             tensor_1.5.1           future.apply_1.20.0   
+##  [46] zoo_1.8-14             sctransform_0.4.2      httpuv_1.6.16         
+##  [49] Matrix_1.7-4           splines_4.5.1          tidyselect_1.2.1      
+##  [52] abind_1.4-8            rstudioapi_0.17.1      yaml_2.3.10           
+##  [55] spatstat.random_3.4-2  spatstat.explore_3.5-3 codetools_0.2-20      
+##  [58] miniUI_0.1.2           listenv_0.9.1          lattice_0.22-5        
+##  [61] tibble_3.3.0           plyr_1.8.9             shiny_1.11.1          
+##  [64] withr_3.0.2            S7_0.2.0               ROCR_1.0-11           
+##  [67] evaluate_1.0.5         Rtsne_0.17             future_1.67.0         
+##  [70] fastDummies_1.7.5      survival_3.8-3         polyclip_1.10-7       
+##  [73] fitdistrplus_1.2-4     pillar_1.11.1          Seurat_5.3.1.9999     
+##  [76] KernSmooth_2.23-26     plotly_4.11.0          generics_0.1.4        
+##  [79] RcppHNSW_0.6.0         sp_2.2-0               scales_1.4.0          
+##  [82] globals_0.18.0         xtable_1.8-4           glue_1.8.0            
+##  [85] lazyeval_0.2.2         tools_4.5.1            data.table_1.17.8     
+##  [88] RSpectra_0.16-2        RANN_2.6.2             fs_1.6.6              
+##  [91] dotCall64_1.2          cowplot_1.2.0          grid_4.5.1            
+##  [94] tidyr_1.3.1            nlme_3.1-168           cli_3.6.5             
+##  [97] spatstat.sparse_3.1-0  spam_2.11-1            viridisLite_0.4.2     
+## [100] dplyr_1.1.4            uwot_0.2.3             gtable_0.3.6          
+## [103] sass_0.4.10            digest_0.6.37          progressr_0.17.0      
+## [106] ggrepel_0.9.6          htmlwidgets_1.6.4      SeuratObject_5.2.0    
+## [109] farver_2.1.2           htmltools_0.5.8.1      lifecycle_1.0.4       
+## [112] httr_1.4.7             mime_0.13              MASS_7.3-65</code></pre>
 </div>
 <div id="references" class="section level1 unnumbered">
 <h1 class="unnumbered">References</h1>
