--- a/signal-aggregation-rules.html
+++ b/signal-aggregation-rules.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-23" />
+<meta name="date" content="2025-10-24" />
 
 <title>Creating signal aggregation rules</title>
 
@@ -395,7 +395,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Creating signal aggregation rules</h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-23</h4>
+<h4 class="date">2025-10-24</h4>
 
 </div>
 
@@ -487,7 +487,7 @@ tutorial).</p>
 <pre class="r"><code># Get distance to the nearest vertex
 near_df &lt;- getNearestNode(ps)
 pdist &lt;- mean(near_df$dist)
-# &#39;pdist&#39; as the average center-to-center distance between vertices
+# &#39;pdist&#39; set as the average center-to-center distance between vertices
 pdist</code></pre>
 <pre><code>## [1] 0.09879871</code></pre>
 <pre class="r"><code># Setting a linear decay model for all vertices
