--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -486,7 +486,7 @@ returns a decay function with customized parameters.</p>
 ##     y &lt;- signal * 0.25^((x/0.75)^2)
 ##     return(y)
 ## }
-## &lt;environment: 0x58f7c44ba180&gt;
+## &lt;environment: 0x5868b31f8200&gt;
 ## attr(,&quot;name&quot;)
 ## [1] &quot;weibullDecay&quot;</code></pre>
 <p></br></p>
