--- a/signal-aggregation-rules.html
+++ b/signal-aggregation-rules.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-25" />
+<meta name="date" content="2026-02-27" />
 
 <title>Creating signal aggregation rules</title>
 
@@ -395,12 +395,12 @@ div.tocify {
 
 <h1 class="title toc-ignore">Creating signal aggregation rules</h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-25</h4>
+<h4 class="date">2026-02-27</h4>
 
 </div>
 
 
-<p><strong>Package</strong>: PathwaySpace 1.0.3.1 <br/></p>
+<p><strong>Package</strong>: PathwaySpace 1.1.1 <br/></p>
 <div id="overview" class="section level1">
 <h1>Overview</h1>
 <p>When aggregating multiple signals over a space, such as
@@ -446,15 +446,15 @@ if (!require(&quot;SpotSpace&quot;, quietly = TRUE)){
   remotes::install_github(&quot;sysbiolab/SpotSpace&quot;)
 }</code></pre>
 <pre class="r"><code># Check versions
-if (packageVersion(&quot;RGraphSpace&quot;) &lt; &quot;1.1.0&quot;){
+if (packageVersion(&quot;RGraphSpace&quot;) &lt; &quot;1.1.1&quot;){
   message(&quot;Need to update &#39;RGraphSpace&#39; for this vignette&quot;)
   remotes::install_github(&quot;sysbiolab/RGraphSpace&quot;)
 }
-if (packageVersion(&quot;PathwaySpace&quot;) &lt; &quot;1.0.3.1&quot;){
+if (packageVersion(&quot;PathwaySpace&quot;) &lt; &quot;1.1.1&quot;){
   message(&quot;Need to update &#39;PathwaySpace&#39; for this vignette&quot;)
   remotes::install_github(&quot;sysbiolab/PathwaySpace&quot;)
 }
-if (packageVersion(&quot;SpotSpace&quot;) &lt; &quot;0.0.2&quot;){
+if (packageVersion(&quot;SpotSpace&quot;) &lt; &quot;0.0.5&quot;){
   message(&quot;Need to update &#39;SpotSpace&#39; for this vignette&quot;)
   remotes::install_github(&quot;sysbiolab/SpotSpace&quot;)
 }</code></pre>
@@ -674,9 +674,9 @@ compatible sign-symmetric aggregation strategies.</p>
 </div>
 <div id="session-information" class="section level1">
 <h1>Session information</h1>
-<pre><code>## R version 4.5.1 (2025-06-13)
+<pre><code>## R version 4.5.2 (2025-10-31)
 ## Platform: x86_64-pc-linux-gnu
-## Running under: Ubuntu 24.04.3 LTS
+## Running under: Ubuntu 24.04.4 LTS
 ## 
 ## Matrix products: default
 ## BLAS:   /usr/lib/x86_64-linux-gnu/openblas-pthread/libblas.so.3 
@@ -697,49 +697,51 @@ compatible sign-symmetric aggregation strategies.</p>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-## [1] patchwork_1.3.2      igraph_2.2.0         SpotSpace_0.0.2     
-## [4] PathwaySpace_1.0.3.1 RGraphSpace_1.1.0    ggplot2_4.0.0.9000  
-## [7] remotes_2.5.0       
+## [1] patchwork_1.3.2    igraph_2.2.0       SpotSpace_0.0.5    PathwaySpace_1.1.1
+## [5] RGraphSpace_1.1.1  ggplot2_4.0.0.9000 remotes_2.5.0      bs4cards_0.1.1    
 ## 
 ## loaded via a namespace (and not attached):
-##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
-##   [4] rlang_1.1.6            magrittr_2.0.4         RcppAnnoy_0.0.22      
-##   [7] spatstat.geom_3.6-0    matrixStats_1.5.0      ggridges_0.5.7        
-##  [10] compiler_4.5.1         png_0.1-8              vctrs_0.6.5           
-##  [13] reshape2_1.4.4         stringr_1.5.2          pkgconfig_2.0.3       
-##  [16] fastmap_1.2.0          promises_1.3.3         rmarkdown_2.30        
-##  [19] purrr_1.1.0            xfun_0.53              cachem_1.1.0          
-##  [22] jsonlite_2.0.0         goftest_1.2-3          later_1.4.4           
-##  [25] spatstat.utils_3.2-0   irlba_2.3.5.1          parallel_4.5.1        
-##  [28] cluster_2.1.8.1        R6_2.6.1               ica_1.0-3             
-##  [31] spatstat.data_3.1-8    bslib_0.9.0            stringi_1.8.7         
-##  [34] RColorBrewer_1.1-3     reticulate_1.43.0      spatstat.univar_3.1-4 
-##  [37] parallelly_1.45.1      lmtest_0.9-40          jquerylib_0.1.4       
-##  [40] scattermore_1.2        Rcpp_1.1.0             knitr_1.50            
-##  [43] tensor_1.5.1           future.apply_1.20.0    zoo_1.8-14            
-##  [46] sctransform_0.4.2      httpuv_1.6.16          Matrix_1.7-4          
-##  [49] splines_4.5.1          tidyselect_1.2.1       abind_1.4-8           
-##  [52] rstudioapi_0.17.1      yaml_2.3.10            spatstat.random_3.4-2 
-##  [55] codetools_0.2-20       miniUI_0.1.2           spatstat.explore_3.5-3
-##  [58] listenv_0.9.1          lattice_0.22-5         tibble_3.3.0          
-##  [61] plyr_1.8.9             shiny_1.11.1           withr_3.0.2           
-##  [64] S7_0.2.0               ROCR_1.0-11            evaluate_1.0.5        
-##  [67] Rtsne_0.17             future_1.67.0          fastDummies_1.7.5     
-##  [70] survival_3.8-3         polyclip_1.10-7        fitdistrplus_1.2-4    
-##  [73] pillar_1.11.1          Seurat_5.3.1.9999      KernSmooth_2.23-26    
-##  [76] plotly_4.11.0          generics_0.1.4         RcppHNSW_0.6.0        
-##  [79] sp_2.2-0               scales_1.4.0           globals_0.18.0        
-##  [82] xtable_1.8-4           glue_1.8.0             lazyeval_0.2.2        
-##  [85] tools_4.5.1            data.table_1.17.8      RSpectra_0.16-2       
-##  [88] RANN_2.6.2             dotCall64_1.2          cowplot_1.2.0         
-##  [91] grid_4.5.1             tidyr_1.3.1            nlme_3.1-168          
-##  [94] cli_3.6.5              spatstat.sparse_3.1-0  spam_2.11-1           
-##  [97] viridisLite_0.4.2      dplyr_1.1.4            uwot_0.2.3            
-## [100] gtable_0.3.6           sass_0.4.10            digest_0.6.37         
-## [103] progressr_0.17.0       ggrepel_0.9.6          htmlwidgets_1.6.4     
-## [106] SeuratObject_5.2.0     farver_2.1.2           htmltools_0.5.8.1     
-## [109] lifecycle_1.0.4        httr_1.4.7             mime_0.13             
-## [112] MASS_7.3-65</code></pre>
+##   [1] RColorBrewer_1.1-3     rstudioapi_0.17.1      jsonlite_2.0.0        
+##   [4] shape_1.4.6.1          magrittr_2.0.4         spatstat.utils_3.2-0  
+##   [7] ggbeeswarm_0.7.2       farver_2.1.2           rmarkdown_2.30        
+##  [10] GlobalOptions_0.1.2    fs_1.6.6               vctrs_0.6.5           
+##  [13] ROCR_1.0-11            spatstat.explore_3.5-3 htmltools_0.5.8.1     
+##  [16] sass_0.4.10            sctransform_0.4.2      parallelly_1.45.1     
+##  [19] KernSmooth_2.23-26     bslib_0.9.0            htmlwidgets_1.6.4     
+##  [22] ica_1.0-3              fontawesome_0.5.3      plyr_1.8.9            
+##  [25] plotly_4.11.0          zoo_1.8-14             cachem_1.1.0          
+##  [28] mime_0.13              lifecycle_1.0.4        pkgconfig_2.0.3       
+##  [31] Matrix_1.7-4           R6_2.6.1               fastmap_1.2.0         
+##  [34] fitdistrplus_1.2-4     future_1.67.0          shiny_1.11.1          
+##  [37] digest_0.6.37          colorspace_2.1-1       Seurat_5.4.0.9009     
+##  [40] tensor_1.5.1           RSpectra_0.16-2        irlba_2.3.5.1         
+##  [43] progressr_0.17.0       spatstat.sparse_3.1-0  httr_1.4.7            
+##  [46] polyclip_1.10-7        abind_1.4-8            compiler_4.5.2        
+##  [49] withr_3.0.2            S7_0.2.0               fastDummies_1.7.5     
+##  [52] MASS_7.3-65            tools_4.5.2            vipor_0.4.7           
+##  [55] lmtest_0.9-40          beeswarm_0.4.0         httpuv_1.6.16         
+##  [58] future.apply_1.20.0    goftest_1.2-3          glue_1.8.0            
+##  [61] nlme_3.1-168           promises_1.3.3         grid_4.5.2            
+##  [64] Rtsne_0.17             cluster_2.1.8.2        reshape2_1.4.4        
+##  [67] generics_0.1.4         gtable_0.3.6           spatstat.data_3.1-8   
+##  [70] tidyr_1.3.1            data.table_1.17.8      sp_2.2-0              
+##  [73] spatstat.geom_3.6-0    RcppAnnoy_0.0.22       ggrepel_0.9.6         
+##  [76] RANN_2.6.2             pillar_1.11.1          stringr_1.5.2         
+##  [79] spam_2.11-1            RcppHNSW_0.6.0         later_1.4.4           
+##  [82] circlize_0.4.16        splines_4.5.2          dplyr_1.1.4           
+##  [85] lattice_0.22-9         survival_3.8-6         deldir_2.0-4          
+##  [88] tidyselect_1.2.1       miniUI_0.1.2           pbapply_1.7-4         
+##  [91] knitr_1.50             gridExtra_2.3          scattermore_1.2       
+##  [94] xfun_0.54              matrixStats_1.5.0      stringi_1.8.7         
+##  [97] lazyeval_0.2.2         yaml_2.3.10            evaluate_1.0.5        
+## [100] codetools_0.2-20       tibble_3.3.0           cli_3.6.5             
+## [103] uwot_0.2.3             xtable_1.8-4           reticulate_1.44.1     
+## [106] jquerylib_0.1.4        dichromat_2.0-0.1      Rcpp_1.1.0            
+## [109] globals_0.18.0         spatstat.random_3.4-2  png_0.1-8             
+## [112] ggrastr_1.0.2          spatstat.univar_3.1-4  parallel_4.5.2        
+## [115] dotCall64_1.2          listenv_0.9.1          viridisLite_0.4.2     
+## [118] scales_1.4.0           ggridges_0.5.7         SeuratObject_5.3.0    
+## [121] purrr_1.1.0            rlang_1.1.6            cowplot_1.2.0</code></pre>
 </div>
 <div id="references" class="section level1 unnumbered">
 <h1 class="unnumbered">References</h1>
