--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2026-02-27" />
+<meta name="date" content="2026-02-28" />
 
 <title>Modeling signal decay functions</title>
 
@@ -372,7 +372,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Modeling signal decay functions</h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2026-02-27</h4>
+<h4 class="date">2026-02-28</h4>
 
 </div>
 
@@ -486,7 +486,7 @@ returns a decay function with customized parameters.</p>
 ##     y &lt;- signal * 0.25^((x/0.75)^2)
 ##     return(y)
 ## }
-## &lt;environment: 0x60962eb18238&gt;
+## &lt;environment: 0x56635c6354f8&gt;
 ## attr(,&quot;name&quot;)
 ## [1] &quot;weibullDecay&quot;</code></pre>
 <p></br></p>
